objects/Threat_Tier_Mappings__mdt.object
<CustomObject><fields>
        <fullName>Field_Mapping__c</fullName>
        <label>Field Mapping</label>
        <referenceTo>Accessories_to_SFA_Field_Mappings__mdt</referenceTo>
        <relationshipLabel>Threat Tier Mappings</relationshipLabel>
        <relationshipName>Threat_Tier_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields><fields>
        <fullName>Minimum_Support_Level__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Minimum Support Level</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Team_Building_Threat_Tier__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Accessories Threat Tier</label>
        <length>40</length>
        <type>Text</type>
    </fields><label>Threat Tier Mappings</label><pluralLabel>Threat Tier Mappings</pluralLabel><visibility>Public</visibility></CustomObject>